# terraform-provider-generic

./: .gitignore  Cargo.toml  aneo.pgp.pub  shell.nix
.github/workflows/: release-publish.yml  release.yml  test.yml
docs/resources/: local_cmd.md  ssh_cmd.md
src/: generic_provider.rs  main.rs  utils.rs
src/cmd/: data_source.rs  mod.rs  normalize.rs  read.rs  resource.rs  state.rs  validate.rs
src/connection/: local.rs  mod.rs
src/connection/ssh/: client.rs  mod.rs  reader.rs  writer.rs
src/file/: data_source.rs  hash_stream.rs  mod.rs  resource.rs
tf-test/: main.tf
