[package]
name = "terraform-provider-generic"
version = "0.1.2"
authors = ["Florian Lemaitre <flemaitre@aneo.fr>"]
description = "Terraform plugin for generic resources"
repository = "https://github.com/aneoconsulting/terraform-provider-generic"
license = "Apache-2.0"
edition = "2021"

[profile.release]
strip = "debuginfo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf-provider = "0.2.2"
rusftp = "0.2.1"

async-process = "2.3"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
tokio = { version = "1.42", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
] }

serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
russh-keys = "0.44"

async-trait = "0.1"
anyhow = "1"
base64 = "0.22"
rust-crypto = "0.2"
bytes = "1.9"
